Card Overlapping fixed

--- a/style.css
+++ b/style.css
@@ -1,57 +1,93 @@
 /*--IMPORTANT TAGS WILL OVERWRITE BOOTSTRAP STYLES--*/
-:root{
+:root {
     /*--COLORS--*/
 
-    --clr--background:#E8EFF5;
+    --clr--background: #E8EFF5;
 
-        /*--Cards--*/
-        --clr--card--shadow--hover:#CFD6E4;
-            /*--Card Buttons--*/
-            --clr--btn--txt--hover:white;
-            --clr--btn--bg--hover:#64A8EE;
-            --clr--btn--shadow--hover:#BAE5FC;
+    /*--Cards--*/
+    --clr--card--shadow--hover: #CFD6E4;
+    /*--Card Buttons--*/
+    --clr--btn--txt--hover: white;
+    --clr--btn--bg--hover: #64A8EE;
+    --clr--btn--shadow--hover: #BAE5FC;
 
 }
-body{
+/*--X--X--X--X--GLOBAL--X--X--X--X--*/
+body {
     background-color: var(--clr--background);
 }
-/*--Card Custom CSS - Not found a way in Bootstrap 5--*/
-.card{
+
+
+/*--X--X--X--X--CARDS--X--X--X--X--*/
+.card img{
+    /*--Adding height to images, To unify and maintain layout--*/
+    min-height: 5rem;
+    height:10rem;
+}
+.card-title{
+    /*--Ensure same height for single line titles--*/
+    min-height: 5rem;
+    /*--adding d-flex flex-column justify-content-around does not work for some reason
+    Justifying text to be in the middle--*/
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+.card {
     /*--Adding responsive width to card--*/
     width: 18rem;
     /*--Rounding card borders--*/
     border-radius: 3%;
 }
-.card:hover{
+.card:hover {
     /*--Slightly Enlarge card--*/
     transform: scale(1.01);
     /*--Add Blurred shadow on card--*/
     box-shadow: 0px 0px 30px var(--clr--card--shadow--hover);
 }
-.card a{
-    /*--Make block element--*/
-    display: block;
-        /*--Change Line height to center text vertically in button--*/
-        line-height: 2rem;
-        /*--Give min-width to ensure pillshape--*/
-        width: 60%;
-        /*--Change link height to ensure decent size button on hover--*/
-        height: 3rem;
-}
-.card a.btn{
+.card a.btn {
     /*Add border radius to avoid animation clipping*/
     border-radius: 1.6rem;
 
 }
-.card a.btn:hover{
+
+.card a.btn:hover {
     /*--Add Background color when button is hovered--*/
-    color: var(--clr--btn--txt--hover)!important;
+    color: var(--clr--btn--txt--hover) !important;
     background-color: var(--clr--btn--bg--hover);
 
     /*--radius for Pill shape--*/
     border-radius: 1.6rem;
     /*--Add Blue shadow blur to button--*/
-    box-shadow: 0rem .35rem 1rem  var(--clr--btn--shadow--hover) !important;
+    box-shadow: 0rem .35rem 1rem var(--clr--btn--shadow--hover) !important;
 
 }
 
+/*--X--X--X--X--MEDIA QUERIES--X--X--X--X--*/
+/*--Card Custom CSS - Not found a way in Bootstrap 5--*/
+/*--Center content vertically on larger screens--*/
+@media only screen and (min-width:768px) {
+    .vertical-center {
+        /*--Setting fixed height of 100% of the viewport--*/
+        min-height: 100vh;
+        height: 100vh;
+        width: 100vw;
+        /*--Adding min-width for children just in case--*/
+        min-width: 100vw;
+        /*--Turning into flexbox--*/
+        display: flex;
+        /*--Align in center--*/
+        align-items: center;
+    }
+}
+/*--Stop cards from coliding under 1400px screens--*/
+@media only screen and (max-width:1400px) and (min-width:992px) {
+    /*--Resise container to fill 100%of window no more no less--*/
+.container{
+max-width: 100vw;
+}
+/*--resize cards to prevent overlapping--*/
+.card{
+    max-width: 25vw;
+}
+}
